--- a/config/config.toml
+++ b/config/config.toml
@@ -2,3 +2,10 @@ title = 'ddd'
 
 [system]
 port = ":1323"
+
+[db]
+postgre_host = "127.0.0.1"
+postgre_port = 6453
+postgre_user = "postgre"
+postgre_password = "123456"
+postgre_dbname = "test"
