--- a/config/config.toml
+++ b/config/config.toml
@@ -4,8 +4,8 @@ title = 'ddd'
 port = ":1323"
 
 [db]
-postgre_host = "127.0.0.1"
-postgre_port = 6453
-postgre_user = "postgre"
-postgre_password = "123456"
-postgre_dbname = "test"
+pg_host = "47.90.63.215"
+pg_port = 5432
+pg_user = "postgres"
+pg_password = "123456"
+pg_dbname = "postgres"
