--- a/config/config.toml
+++ b/config/config.toml
@@ -1,11 +1,31 @@
 title = 'ddd'
 
 [system]
-port = ":8999"
+    port = ":8999"
 
 [db]
-pg_host = "118.126.103.122"
-pg_port = 5432
-pg_user = "postgres"
-pg_password = ""
-pg_dbname = "postgres"
+    pg_host = "118.126.103.122"
+    pg_port = 5432
+    pg_user = "postgres"
+    pg_password = "123456"
+    pg_dbname = "postgres"
+
+[redis]
+    addr = "127.0.0.1:6379"
+    password = ""
+
+
+# 配置格式 数组
+[[devices]]
+    number = "+8618575680000"
+    code = 123
+[[devices]]
+    number = "+8612345670001"
+    code = 123
+
+# 配置格式 数组
+[turn]
+    uris = [
+        "stun:yourdomain.org:80",
+        "stun:yourdomain.com:443",
+    ]
